--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 \usepackage[backgroundcolor=Apricot]{todonotes}
 \usepackage{hyperref}
 \usepackage{csquotes}
+\usepackage{float}
 %\usepackage{tablefootnote}
 \usepackage{threeparttable}
 
@@ -57,16 +58,16 @@
 %\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{Verze s typograficky upravenými kapitolami - zbývají špatně zalomené řádky v bibliografii. Kapitoly z této verze budou zaslány autorům k finální autorizaci. Rovněž je třeba upravit přetéjkající tabulky \ref{tab:states} a \ref{paramtab} }}
 
 
-\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{Verze do které Milan zanáší korektrorské připomínky z Karolina.}}
+\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{Verze k odevzdání.}}
 \author{Bisop}
 \maketitle
 
-
 %\subfile{prispevky/065-Nekolik_poznamek/main.tex}
+
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \setcounter{page}{5}
+
 \subfile{prispevky/000-uvod/main.tex}
-
-
 \part{Východiska, metody, modely}
 
 \subfile{prispevky/010-Co_se_vi/main.tex}
@@ -76,8 +77,7 @@
 \newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/160-Agentni_modely/main.tex}
 \subfile{prispevky/070-Ucinnost_ockovani/main.tex}
-% Tady problem!!! prazdna stranka se radi spatne pred obrazky, tak zakomentovano
-%\newpage \thispagestyle{empty} \mbox{} \newpage
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/030-Co_na_cem_zavisi/main.tex}
 
 \part{Pandemie, data a evidence}
