--- a/prispevky/030-Co_na_cem_zavisi/main.tex
+++ b/prispevky/030-Co_na_cem_zavisi/main.tex
@@ -86,7 +86,7 @@ daného opatření by měla být statisticky prokázána).}
 \end{figure}\\
 Základní statistická analýza přesvědčivě ukazuje souvislost redukce kontaktů s~nárůstem epidemie. Na levém grafu obrázku \ref{fig:souvislosti} jsou vykresleny relativní týdenní přírůstky nových
 případů oproti koeficientu redukce
-kontaktů, měřenému longitudinálním sociologickým výzumem \cite{paqcovid} dva tý\-dny pře\-dem. 
+kontaktů, mě\-ře\-né\-mu longitudinálním sociologickým výzumem \cite{paqcovid} dva tý\-dny pře\-dem. 
 Koeficient redukce nabývá hodnoty 1 v~případě,
 že je množství kontaktů shodné s~dobou těsně před pandemií, a byl
 by hypoteticky nulový, pokud by lidé neměli žádné rizikové kontakty.
