--- a/prispevky/050-Grafy_kontaktu/main.tex
+++ b/prispevky/050-Grafy_kontaktu/main.tex
@@ -45,7 +45,7 @@ Pravděpodobnosti nakažení v~jednotlivých prostředích se přirozeně liší
     \label{kategorie}
 \end{figure}
 
-Jak bylo již naznačeno, kontakty rozdělujeme do následujících kategorií: kontakty v~rodině, kontakty ve škole, kontakty na pracovišti a kontakty při volnočasových aktivitách, mezi které patří například návštěvy restaurací, návštěvy v~jiných domácnostech, nebo návštěvy divadel atd. Vlastní přístup ke tvorbě grafu kontaktů vy\-ža\-du\-je také doprava či setkávání během nakupování. Způsob tvorby vrstev grafu je podrobně popsán v~\cite{M-techrep2021}, kde jsou vysvětleny postupy vedoucí k~určení jednotlivých parametrů včetně odůvodnění. Dále popíšeme implementaci kontaktů ve vybraných vrstvách grafu kontaktů.
+Jak bylo již naznačeno, kontakty rozdělujeme do následujících kategorií: kontakty v~rodině, kontakty ve škole, kontakty na pracovišti a kontakty při volnočasových aktivitách, mezi které patří například návštěvy restaurací, návštěvy v~jiných do\-mác\-nos\-tech, nebo návštěvy divadel atd. Vlastní přístup ke tvorbě grafu kontaktů vy\-ža\-du\-je také doprava či setkávání během nakupování. Způsob tvorby vrstev grafu je podrobně popsán v~\cite{M-techrep2021}, kde jsou vysvětleny postupy vedoucí k~určení jednotlivých parametrů včetně odůvodnění. Dále popíšeme implementaci kontaktů ve vybraných vrstvách grafu kontaktů.
 
 Jak je uvedeno výše, pro tvorbu \emph{rodinných kontaktů} využíváme anonymizovaných dat ČSÚ, která umožňují modelovat jednotlivě každou domácnost. Předpokládáme, že se každý člen domácnosti setkává se všemi jejími ostatními členy. Dále se potkávají členové různých domácností v~rámci stejného bydliště (domu). Posledním zdrojem kontaktů v~rámci domácností jsou pak mezigenerační návštěvy.
 Každou osobu starší 50 let považujeme za potenciálního rodiče, který bude navštěvovat domácnosti svých dětí. Počet dětí získáváme z~cenzurovaného normálního rozdělení s~průměrem 1,92 a standardní odchylkou 0,7. Tyto hodnoty odpovídají údajům z~výzkumu \cite{zaj:ess}.
