--- a/prispevky/060-Typy_modelu/main.tex
+++ b/prispevky/060-Typy_modelu/main.tex
@@ -12,7 +12,7 @@ Vědecké zkoumání světa tedy začíná hypotézou, představou o~tom, jak sv
 
 Matematické modely, tedy matematické reprezentace určité části světa, dnes hrají nezastupitelnou roli v~řadě vědeckých disciplín a nejinak je tomu v~epidemiologii. Jak si ukážeme v~následující části, matematické modelování je součástí epidemiologie už více než 100 let. Během této doby plnilo nejrůznější úkoly, které na něj v~různých situacích klademe: jako nástroj pro ověřování hypotéz, pro vysvětlení pozorovaných dat, pro pochopení základních principů infekční dynamiky, pro výpočet základních epidemiologických veličin, pro porozumění aktuálnímu chování specifických infekcí, pro předpovědi dalšího šíření infekcí, pro posouzení vlivu možných protiepidemických opatření či pro plánování vakcinačních strategií. Řadu těchto rolí hrály a stále hrají matematické modely i vzhledem k~epidemii covid-19 po celém světě, a to včetně České republiky.
 
-V~této kapitole si představíme první historické kroky matematické epidemiologie, jak se také aktivitám spojeným s~modelováním infekčních nemocí souhrnně říká, které formovaly a formují modelování epidemií dodnes. Naznačíme také těžkosti, které musí každý matematický modelář překonávat, chce-li modelovat konkrétní epidemii. Nakonec si stručně představíme model, který jsme vytvořili v~rámci centra BISOP pro popis první vlny epidemie covid-19 na jaře roku 2020 v~České republice, a ukážeme si některé jeho výsledky. Je dobré si uvědomit, že neexistuje jediný správný matematický model epidemie, dokonce že žádný model není správný, neboť každý model je nutně už z~definice abstrakcí a zjednodušením reality. Určité modely mohou být pro zkoumání dané hypotézy lepší než jiné, avšak i ty v~dané chvíli lepší mohou být nahrazeny jinými, máme-li k~dispozici nové informace, data či změní-li se podmínky. Skvělým úvodem do problematiky modelů a modelování z~filozofického i praktického hlediska jsou knihy \cite{GerleeLundh2016} a \cite{HilbornMangel1997}.
+V~této kapitole si představíme první historické kroky matematické epidemiologie, jak se také aktivitám spojeným s~modelováním infekčních nemocí souhrnně říká, které formovaly a formují modelování epidemií dodnes. Naznačíme také těžkosti, které musí každý matematický modelář překonávat, chce-li modelovat konkrétní epidemii. Nakonec si stručně představíme model, který jsme vytvořili v~rámci centra BISOP pro popis první vlny epidemie covid-19 na jaře roku 2020 v~České republice, a ukážeme si některé jeho výsledky. Je dobré si uvědomit, že neexistuje jediný správný matematický model epidemie, dokonce že žádný model není správný, neboť každý model je nutně už z~definice abstrakcí a zjednodušením reality. Určité modely mohou být pro zkoumání dané hypotézy lepší než jiné, avšak i ty v~dané chvíli lepší mohou být nahrazeny jinými, máme-li k~dispozici nové informace, data či změní-li se podmínky. Skvělým úvodem do problematiky modelů a modelování z~filozofického i~praktického hlediska jsou knihy \cite{GerleeLundh2016} a \cite{HilbornMangel1997}.
 
 \section*{Historie a současnost matematické epidemiologie}
 
@@ -89,7 +89,7 @@ SIR model je dnes základním stavebním kamenem takřka všech epidemických mo
 
 \section*{Matematické modelování reálných epidemií}
 
-Zatímco matematika epidemií je relativně jednoduchá, problémy nastávají, setká-li se s~reálným světem. Modely jsou z~principu nedokonalé, mnohdy založené na řadě netestovatelných, nepřesných, či dokonce úmyslně nepřesných předpokladů (například standardní předpoklad dokonalého míchání populace), data jsou neúplná či nepřesná. Jde-li navíc o~rozsáhlou epidemii, či dokonce pandemii, jako v~případě covid-19, vstupují do hry další faktory, např. v~zásadě kontinuální proměna situace (změny v~chování lidí, nové informace o~infekci, nové postupy v~boji s~epidemií), tlak veřejnosti (jak bychom měli ideálně reagovat, bude dané opatření dostatečně fungovat, jak se bude epidemie dále vyvíjet), či dokonce vlastní obavy (co když jsme někde udělali chybu, co když to s~doporučeními přeženeme, nebo naopak budeme příliš optimističtí). Řečeno s~lehkou nadsázkou, je to, jako když stavíme koleje, přičemž za zády už slyšíme přijíždět vlak. 
+Zatímco matematika epidemií je relativně jednoduchá, problémy nastávají, setká-li se s~reálným světem. Modely jsou z~principu nedokonalé, mnohdy založené na řadě netestovatelných, nepřesných, či dokonce úmyslně nepřesných předpokladů (na\-pří\-klad standardní předpoklad dokonalého míchání populace), data jsou neúplná či nepřesná. Jde-li navíc o~rozsáhlou epidemii, či dokonce pandemii, jako v~případě covid-19, vstupují do hry další faktory, např. v~zásadě kontinuální proměna situace (změny v~chování lidí, nové informace o~infekci, nové postupy v~boji s~epidemií), tlak veřejnosti (jak bychom měli ideálně reagovat, bude dané opatření dostatečně fungovat, jak se bude epidemie dále vyvíjet), či dokonce vlastní obavy (co když jsme někde udělali chybu, co když to s~doporučeními přeženeme, nebo naopak budeme příliš optimističtí). Řečeno s~lehkou nadsázkou, je to, jako když stavíme koleje, přičemž za zády už slyšíme přijíždět vlak. 
 
 Jedna z~takových kontinuálních proměn se týkala základní struktury samotných modelů. Jak postupně přicházely nové informace, modelová struktura se vyvíjela. Počáteční SIR model jako základ pro výpočet bazálních parametrů epidemie zmí\-ně\-ných výše se brzy změnil na SEIR model s~třídou $E$ popisující nakažené, ale zatím neinfekční jedince. Z~tohoto modelu se následně stal SEIAR model s~třídou $A$ jedinců asymptomatických po celou dobu epidemie, a nakonec SEPIAR model, kdy se třída $I$ rozdělila na třidu $P$ presymptomatických jedinců (infekční, zatím bez symptomů) a následnou třídu $I$ jedinců se symptomy (obr.\,\ref{SEPIAR1}). Zahrnutí tříd $A$ a $P$ bylo důležité z~toho důvodu, že zatímco jedinci asymptomatičtí po celou dobu své infekčnosti mají nižší nakažlivost, symptomatičtí infekční jedinci mají díky (samo)izolaci nižší množství kontaktů. Řízení epidemie prostřednictvím opatření, ale také vlastní změny chování vedou k~časově proměnné hodnotě parametru $\beta$ modelu (\ref{SIR1}); tento parametr se však vyskytuje ve všech uvedených modelových variantách. V~důsledku změn tohoto parametru také epidemie covid-19 nikde neodpovídá pouze jedné vlně. V~České republice jsme byli svědky dnes už pěti epidemických vln. Kromě toho se v~čase měnila také prodleva mezi testem a reportingem v~případě infekčnosti, účinnost trasování a nemocniční péče, ochota plošná opatření dodržovat, převládající virová varianta či intenzita očkování. Epidemie covid-19 je tak nejen epidemiologický, ale do značné míry také sociální fenomén.   
 
