--- a/prispevky/085-Nove_vyzvy/main.tex
+++ b/prispevky/085-Nove_vyzvy/main.tex
@@ -70,7 +70,7 @@ Hejtmani kritizovali především fakt, že informace přicházely pozdě a v~ne
 
 MZ periodicky konzultovalo svůj postup i s~externími skupinami (příprava PES, MeSES apod.), i když komunikace byla často problematická \cite{irozhlas_smejkalovu_2021, jerabkova_smejkal_2021}. Spolupráce se po určité době podařila s~iniciativou Cesta ven při přípravě komunikační kampaně \cite{mudrochova_kampan_2020}. Stejně tak úspěšné Národní očkovací centrum v~O2 aréně je výsledkem kooperace několika partnerů (ÚVN, NAKIT -- Národní agentura pro komunikační a informační technologie, Lékaři pomáhají Česku, AČR), včetně pronájmu od soukromého majitele objektu. Mnohé projekty „koalice partnerů“ vznikly na úrovni krajů a obcí. MZ ale nedalo velkou roli akademickému sektoru: Matematický model očkování MZ ČR nevytvořilo ani nikomu nezadalo. Česká prioritizace \cite{strategie_ockovani_mzcr_2020} tak neobsahuje žádný náznak spolupráce s~akademickou sférou nebo „evidence-based“ rozhodování. Stejně tak pokus o~spolupráci s~akademickou sférou v~oblasti vývoje vakcíny strádal nejasnou komunikací s~partnery i vůči veřejnosti \cite{bezdekova_ceska_2021}.
 
-Co se týče \uv{partnerství} s~občany, komunikace o~očkování byla opožděná, málo transparentní a vytvářela chaotický dojem -- prioritizace skupin se několikrát měnila bez dostatečného vysvětlení. V~dubnu 2021 hodnotila průběh očkování negativně více než polovina dotazovaných \cite{cvvm_verejnost_ockovani_2021}. Silně medializovaným příkladem absence orientace na klienta bylo spuštění Centrálního rezervačního systému (CRS) 15.~ledna 2021. Občané očekávali službu srovnatelnou se soukromým sektorem, zatímco nabídnuté řešení nesplňovalo základní parametry jednoduchosti a uživatelského komfortu \cite{blaha_registrace_2021} a nezohlednilo fakt, že jeho první cílovou skupinou jsou senioři. Pandemie obecně obnažila zaostávání ČR v oblasti digitalizace \cite{usela_pres_2021} i absenci pokroku v~této oblasti. \cite{european_comission_desi_2020, hlidac_nedigitalni_2021}.
+Co se týče \uv{partnerství} s~občany, komunikace o~očkování byla opožděná, málo transparentní a vytvářela chaotický dojem -- prioritizace skupin se několikrát měnila bez dostatečného vysvětlení. V~dubnu 2021 hodnotila průběh očkování negativně více než polovina dotazovaných \cite{cvvm_verejnost_ockovani_2021}. Silně medializovaným příkladem absence orientace na klienta bylo spuštění Centrálního rezervačního systému (CRS) 15.~ledna 2021. Občané očekávali službu srovnatelnou se soukromým sektorem, zatímco nabídnuté řešení nesplňovalo základní parametry jednoduchosti a u\-ži\-va\-tel\-ské\-ho komfortu \cite{blaha_registrace_2021} a nezohlednilo fakt, že jeho první cílovou skupinou jsou senioři. Pandemie obecně obnažila zaostávání ČR v oblasti digitalizace \cite{usela_pres_2021} i absenci pokroku v~této oblasti. \cite{european_comission_desi_2020, hlidac_nedigitalni_2021}.
 
 \paragraph{Širší kontext/závěr:} Příprava očkování na jednu stranu potvrdila, že obecně \uv{vláda i státní správa sází na ,resortismus' -- úzký pohled lidí z~jednoho oboru, a ustálené struktury státní správy}. \cite{hudema_hudema_2021}. Na druhou stranu též ukázala schopnost pracovat v~koalici partnerů, pokud se o~to státní správa pokusí, ať už se to týkalo komunikační kampaně, Národního očkovacího centra nebo projektů na úrovni krajů a obcí.
 
