--- a/prispevky/120-Trasovani/main.tex
+++ b/prispevky/120-Trasovani/main.tex
@@ -105,7 +105,7 @@ Například navýšení kapacit trasování nedává smysl, pokud nejsou součas
 
 Celý systém „test, trace, isolate“ je také závislý na ochotě občanů spolupracovat, a to ve třech klíčových momentech: a) testovat se v~případě pociťování symptomů, b) nahlásit své rizikové kontakty, c) dodržovat nařízenou izolaci/karanténu. Nízká míra ochoty občanů (\uv{compliance}) byla hlavním problémem systému -- například na konci ledna 2021 pouze třetina lidí, kteří byli v~kontaktu s~nakaženým nebo měli specifické příznaky, šla na test \cite{tr_PAQ02}. K~nízké compliance také dodnes přispívá reputace trasování jako obecně nefunkčního systému, která vznikla na podzim 2020 \cite{tr_bisop01}.
 
-Nevíme o~žádné analýze ministerstva zdravotnictví ČR, která by se tímto klíčovým problémem zabývala. I~když způsoby jak compliance vylepšit existují \cite{tr_bisop02}, a viz. kapitolu \ref{Compliance} v~této knize, compliance nebyla systematicky sledována ani strategicky nahlížena. Pro srovnání v~Anglii vláda zadala průzkum veřejného mínění pro lepší pochopení dodržování izolace/karantény \cite{tr_ofns}. Na absenci snahy o~pochopení ukazuje i výrok hlavní hygieničky Svrčinové na tiskové konferenci v~dubnu 2021: „Neumím si vysvětlit, čím to je, že lidi ty kontakty nehlásí.“ \cite{tr_idnes01}.
+Nevíme o~žádné analýze ministerstva zdravotnictví ČR, která by se tímto klí\-čo\-vým problémem zabývala. I~když způsoby jak compliance vylepšit existují \cite{tr_bisop02}, a viz. kapitolu \ref{Compliance} v~této knize, compliance nebyla systematicky sledována ani strategicky nahlížena. Pro srovnání v~Anglii vláda zadala průzkum veřejného mínění pro lepší pochopení dodržování izolace/karantény \cite{tr_ofns}. Na absenci snahy o~pochopení ukazuje i výrok hlavní hygieničky Svrčinové na tiskové konferenci v~dubnu 2021: „Neumím si vysvětlit, čím to je, že lidi ty kontakty nehlásí.“ \cite{tr_idnes01}.
 
 %\subsection*{Rychlost trasování}
 
