--- a/prispevky/130-Compliance/main.tex
+++ b/prispevky/130-Compliance/main.tex
@@ -6,7 +6,7 @@
 
 \section*{Úvod} 
 
-Od začátku pandemie onemocnění covid-19 se naše země při snaze situaci zvládnout potýká s~organizačními a komunikačními problémy \cite{CeskaTiskovaKancelar2020,Vlckova2020}. Jedním ze stěžejních faktorů efektivního boje s~pandemií je compliance -- dodržování protiepidemických opatření širokou veřejností \cite{VanRooij2020}. Náš článek nabízí rozbor psychologických faktorů, které mohou míru compliance ovlivnit. Opíráme se při tom o~teorie z~kognitivní psychologie, sociální psychologie, vlastní šetření a veřejně dostupná data. 
+Od začátku pandemie onemocnění covid-19 se naše země při snaze situaci zvládnout potýká s~organizačními a komunikačními problémy \cite{CeskaTiskovaKancelar2020,Vlckova2020}. Jedním ze stěžejních faktorů efektivního boje s~pandemií je compliance -- dodržování protiepidemických opatření širokou veřejností \cite{VanRooij2020}. Náš článek nabízí rozbor psychologických faktorů, které mohou míru compliance ovlivnit. Opí\-rá\-me se při tom o~teorie z~kognitivní psychologie, sociální psychologie, vlastní šetření a veřejně dostupná data. 
 
 Účinnost preventivních opatření, jako je mytí rukou, nošení roušek, sociální distancování apod., záleží na míře jejich dodržování, tzv. compliance. Zvláště ve druhé a třetí vlně pandemie se u~nás objevilo přibývající množství zpráv o~jejich nedodržování. Například data z~ČR z~podzimu 2020 ukazují, že zatímco lidé při trasování oficiálně hlásí hygieně jeden rizikový kontakt týdně (viz kapitolu \ref{Trasovani}), anonymně přiznávají 4--7 kontaktů \cite{tr_PAQ01}. Navíc podle sociologického šetření \uv{Život během pandemie} z~listopadu 2020 bylo mezi dospělými respondenty až 12 \% tzv. rizikových netestovaných, tedy lidí, kteří měli v~posledním měsíci buď kontakt s~nakaženým, nebo příznaky covid-19 a zároveň v~té době nebyli testováni \cite{Prokop2020a}. Malá míra otestovanosti může indikovat i to, že tito lidé (a jejich kontakty) nejsou hygieně známi. Nedodržování opatření zdaleka není problém jen České republiky, podle reportů z~Harris County v~USA ze srpna 2020 25 \% z~nakažených lidí odmítlo kontaktovaných během trasování nahlásit jakékoli rizikové kontakty \cite{Shapiro2020}. A~například dotazníková studie ve Velké Británii odhalila, že jen 20 \% lidí dotázaných mezi dubnem 2020 a lednem 2021 během nařízené izolace skutečně neopustilo místo bydliště \cite{Smith2021}.
 
