--- a/prispevky/160-Agentni_modely/main.tex
+++ b/prispevky/160-Agentni_modely/main.tex
@@ -187,7 +187,7 @@ Základní agentní model s~jinou sítí kontaktů a jinými algoritmy protiepid
 
 Algoritmy protiepidemických opatření v~prostředí školy odrážejí reálně uvažovaná opatření omezení výuky. Jedná se hlavně o~varianty střídavé docházky, rozdělení školy na stupně, případně kritické ročníky (první, druhý a devátý). Dalším typem opatření jsou různé strategie testování s~ohledem na jejich četnost i efektivitu (antigenní a PCR testy.)
 
-Výsledky studie ukazují efektivitu týdenních rotací celých tříd, která se ještě zesiluje pravidelným testováním. Efektivita testů je v~tomto případě méně důležitá a lze ji nahradit vyšší frekvencí testování. Podrobnější výsledky této studie popisuje kapitola~\ref{Skoly}.
+Výsledky studie ukazují efektivitu týdenních rotací celých tříd, která se ještě zesiluje pravidelným testováním. Efektivita testů je v~tomto případě méně důležitá a lze ji nahradit vyšší frekvencí testování. Podrobnější výsledky popisuje kapitola~\ref{Skoly}.
 
 %\cite{model-M}
 
